<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".filepicker.FilesActivity">

    <Button
        android:id="@+id/launch_imagePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_image_picker"

         />

    <Button
        android:id="@+id/launch_videoPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_video_picker"

         />

    <Button
        android:id="@+id/launch_audioPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_audio_picker"

       />

    <Button
        android:id="@+id/launch_filePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_file_picker"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tool:listitem="@layout/file_list_item" />

</LinearLayout>