<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:background="@color/colorPrimary">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="50dp"
        app:cardElevation="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mzizi_app_icon"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:textSize="12sp"
                android:textColor="@color/homeText"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:text=""
                android:id="@+id/version_name_ID"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/homeText"
                android:layout_width="wrap_content"
                android:text="About"
                android:layout_height="wrap_content" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text2"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text3"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text4"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text5"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text6"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text7"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text8"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text9"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text10"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
                        android:textColor="@color/homeText"
                        android:layout_width="match_parent"
                        android:text="@string/about_text12"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/homeText"
                        android:layout_width="wrap_content"
                        android:text="@string/about_text11"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"

                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:text="@string/about_text13"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"
android:visibility="gone"
                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:text="@string/about_text14"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"

                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:text="@string/about_text15"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingStart="30dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12sp"

                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:text="@string/about_text16"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/link_ID"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:text="Privacy Policy"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_bright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>